<resources>
    <string name="app_name" translatable="false">Tiny Notes Manager</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_collectionView">Collection View</string>

    <string name="fab_collection">Add new collection</string>
    <string name="fab_item">Add new item</string>
    <string name="collection_input_hint_name">Name</string>
    <string name="collection_input_hint_description">Description</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="remove">Remove</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="delete_question">"Do you want to delete: "</string>
    <string name="cancel">Cancel</string>
    <string name="please_add_a_description">Please add a description</string>
    <string name="please_add_a_name">Please add a name</string>
    <string name="select_file">Select File</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="import_collection">Import</string>
    <string name="settings">Settings</string>
    <string name="general_preference_title">General</string>
    <string name="theme_mode_toggle">Toggle to switch between modes</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About</string>
    <string name="app_version">App version</string>
    <string name="developer">Developer</string>
    <string name="contact">Contact</string>
    <string name="github_repo">Github Repo</string>
    <string name="view_source_code">View source code</string>
    <string name="error_saving">"Error saving folder, please try again. "</string>
    <string name="add_folder">Add folder</string>
    <string name="add_note">New note</string>
    <string name="folder">Folder</string>
    <string name="delete_folder">Delete Current Folder</string>
    <string name="edit_folder">Edit Current Folder</string>
    <string name="note_pres_mode">Note View</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_folder_confirmation">To delete the folder and all its contents, type \"%1$s\" below.</string>
    <string name="type_folder_name_to_confirm">Type the folder name to confirm deletion:</string>
    <string name="folder_name">Folder name</string>
    <string name="delete">Delete</string>
    <string name="name_doesnt_match">The name you entered doesn\'t match the folder name</string>
    <string name="folder_deleted">Folder deleted successfully</string>
    <string name="delete_failed">Failed to delete folder</string>
    <string name="folder_not_found">Folder not found</string>
    <string name="cannot_delete_root">Cannot delete the root folder</string>
    <string name="no_notes_to_display">No notes to display in this folder</string>
    <string name="note_deep_pres_mode">Deep View</string>
    <string name="choose_presentation_mode">Choose your presentation mode</string>
    <string name="node_type_icon">Item type icon.</string>
    <string name="list_of_items_inside_this_folder">List of items inside this folder.</string>
    <string name="app_theme">App Theme</string>
    <string name="theme_options">Choose light, dark, or system default theme</string>
</resources>