<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lmizuno.smallnotesmanager.Ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_firstFragment_to_secondFragment"
            app:destination="@id/navigation_collection_view" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.lmizuno.smallnotesmanager.Ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.lmizuno.smallnotesmanager.Ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_collection_view"
        android:name="com.lmizuno.smallnotesmanager.Ui.collection.CollectionViewFragment"
        android:label="@string/title_collectionView"
        tools:layout="@layout/fragment_collection_view" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.lmizuno.smallnotesmanager.Ui.settings.SettingsFragment"
        android:label="Settings" />

    <action
        android:id="@+id/action_navigation_home_to_settingsFragment"
        app:destination="@id/settingsFragment" />
</navigation>